--- a/package.json
+++ b/package.json
@@ -9,14 +9,43 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.2",
+    "@hookform/resolvers": "^2.9.10",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "axios": "^1.2.0",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "expo": "~48.0.18",
+    "expo-file-system": "~15.2.2",
+    "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-navigation-bar": "~2.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "native-base": "^3.4.19",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.38.0",
+    "react-native": "0.71.8",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@rocketseat/eslint-config": "^1.2.0",
+    "@types/react": "~18.0.27",
+    "@types/react-native": "~0.71.8",
+    "@types/react-native-dotenv": "^0.2.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "react-native-dotenv": "^3.4.8",
+    "react-native-svg-transformer": "^1.0.0",
+    "typescript": "^4.9.4"
   },
   "private": true
 }
