--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
       [
         "expo-image-picker",
         {
-          "photosPermission": "The app accesses your photos to let you share them with your friends."
+          "photosPermission": "A aplicação acessa suas fotos para permitir que você as compartilhe com o banco de dados de imagens do Projeto SST.",
+          "cameraPermission": "A aplicação acessa sua camera para permitir enviar fotos ao banco de imagens do Projeto SST."
         }
       ]
     ],
