--- a/ios/Podfile
+++ b/ios/Podfile
@@ -88,3 +88,16 @@ target 'sstprojectapp' do
     end
   end
 end
+
+# Uncomment this line if you're not using auto-linking
+# pod 'WatermelonDB', path: '../node_modules/@nozbe/watermelondb'
+
+# WatermelonDB dependency, should not be needed on modern React Native
+# (please file an issue if this causes issues for you)
+# pod 'React-jsi', path: '../node_modules/react-native/ReactCommon/jsi', modular_headers: true
+
+# WatermelonDB dependency
+pod 'simdjson', path: '../node_modules/@nozbe/simdjson', modular_headers: true
+
+pod 'SDWebImage', :modular_headers => true
+pod 'SDWebImageWebPCoder', :modular_headers => true
