--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@baronha/react-native-photo-editor": "^1.1.6",
     "@expo-google-fonts/roboto": "^0.2.2",
     "@hookform/resolvers": "^2.9.10",
+    "@nozbe/watermelondb": "^0.26.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "^1.2.0",
     "babel-plugin-inline-dotenv": "^1.7.0",
+    "dayjs": "^1.11.9",
     "expo": "~48.0.18",
     "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
+    "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-navigation-bar": "~2.1.1",
     "expo-splash-screen": "~0.18.2",
@@ -29,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-native": "0.71.8",
+    "react-native-image-crop-picker": "^0.40.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
@@ -37,6 +42,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-decorators": "^7.22.7",
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/react": "~18.0.27",
     "@types/react-native": "~0.71.8",
