--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,14 @@
       "@components/*": [
         "./src/components/*"
       ],
+      "@constants/*": [
+        "./src/constants/*"
+      ],
       "@screens/*": [
         "./src/screens/*"
       ],
-      "@storage/*": [
-        "./src/storage/*"
+      "@libs/*": [
+        "src/libs/*"
       ],
       "@utils/*": [
         "./src/utils/*"
