--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-inline-dotenv": "^1.7.0",
     "dayjs": "^1.11.9",
     "expo": "~48.0.18",
+    "expo-camera": "~13.2.1",
     "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
     "expo-image-manipulator": "~11.1.1",
@@ -33,16 +34,21 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-image-crop-picker": "^0.40.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-static-safe-area-insets": "^2.2.0",
     "react-native-svg": "13.4.0",
+    "react-native-vision-camera": "^2.15.4",
     "react-native-web": "~0.18.7",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-decorators": "^7.22.7",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/react": "~18.0.27",
     "@types/react-native": "~0.71.8",
