--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
+    "bundle:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -27,6 +28,8 @@
     "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-navigation-bar": "~2.1.1",
+    "expo-screen-orientation": "~5.1.1",
+    "expo-sensors": "~12.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "native-base": "^3.4.19",
