--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-font": "~11.1.1",
     "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "~14.1.1",
+    "expo-media-library": "~15.2.3",
     "expo-navigation-bar": "~2.1.1",
     "expo-screen-orientation": "~5.1.1",
     "expo-sensors": "~12.1.1",
