--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   },
   "dependencies": {
     "@baronha/react-native-photo-editor": "^1.1.6",
+    "@brazilian-utils/brazilian-utils": "^1.0.0-rc.12",
     "@expo-google-fonts/roboto": "^0.2.2",
     "@hookform/resolvers": "^2.9.10",
     "@nozbe/watermelondb": "^0.26.0",
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@tanstack/react-query": "^4.32.6",
     "axios": "^1.2.0",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "dayjs": "^1.11.9",
@@ -35,6 +38,7 @@
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "native-base": "^3.4.19",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
@@ -48,6 +52,7 @@
     "react-native-svg": "13.4.0",
     "react-native-vision-camera": "^2.15.4",
     "react-native-web": "~0.18.7",
+    "use-debounce": "^9.0.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -69,11 +74,11 @@
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^3.0.0",
+    "react-native": "^0.70.7",
     "react-native-dotenv": "^3.4.8",
     "react-native-svg-transformer": "^1.0.0",
-    "typescript": "^4.9.4",
     "react-native-web": "^0.18.12",
-    "react-native": "^0.70.7"
+    "typescript": "^4.9.4"
   },
   "private": true
 }
