--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-sensors": "~12.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "fuse.js": "^6.6.2",
     "native-base": "^3.4.19",
     "query-string": "^8.1.0",
     "react": "18.2.0",
@@ -45,13 +46,16 @@
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-crop-picker": "^0.40.0",
+    "react-native-pager-view": "^6.2.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-static-safe-area-insets": "^2.2.0",
     "react-native-svg": "13.4.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vision-camera": "^2.15.4",
     "react-native-web": "~0.18.7",
+    "sort-array": "^4.1.5",
     "use-debounce": "^9.0.4",
     "yup": "^0.32.11"
   },
@@ -62,6 +66,7 @@
     "@types/react": "~18.0.27",
     "@types/react-native": "^0.71.6",
     "@types/react-native-dotenv": "^0.2.0",
+    "@types/sort-array": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "babel-plugin-module-resolver": "^4.1.0",
