--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-static-safe-area-insets": "^2.2.0",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-uuid": "^2.0.1",
     "react-native-vision-camera": "^2.15.4",
     "react-native-web": "~0.18.7",
     "sort-array": "^4.1.5",
