--- a/app.json
+++ b/app.json
@@ -33,6 +33,12 @@
           "photosPermission": "A aplicação acessa suas fotos para permitir que você as compartilhe com o banco de dados de imagens do Projeto SST.",
           "cameraPermission": "A aplicação acessa sua camera para permitir enviar fotos ao banco de imagens do Projeto SST."
         }
+      ],
+      [
+        "expo-av",
+        {
+          "microphonePermission": "Permita que o APP SimpleSST acesse seu microfone."
+        }
       ]
     ],
     "updates": {
