--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@expo-google-fonts/roboto": "^0.2.2",
     "@hookform/resolvers": "^2.9.10",
     "@nozbe/watermelondb": "^0.26.0",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/netinfo": "9.3.7",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
@@ -25,37 +25,39 @@
     "axios": "^1.2.0",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "dayjs": "^1.11.9",
-    "expo": "~48.0.18",
-    "expo-camera": "~13.2.1",
-    "expo-file-system": "~15.2.2",
-    "expo-font": "~11.1.1",
-    "expo-image-manipulator": "~11.1.1",
-    "expo-image-picker": "~14.1.1",
-    "expo-media-library": "~15.2.3",
-    "expo-navigation-bar": "~2.1.1",
-    "expo-screen-orientation": "~5.1.1",
-    "expo-sensors": "~12.1.1",
-    "expo-splash-screen": "~0.18.2",
-    "expo-status-bar": "~1.4.4",
+    "expo": "49.0.15",
+    "expo-av": "~13.4.1",
+    "expo-camera": "~13.4.4",
+    "expo-file-system": "~15.4.4",
+    "expo-font": "~11.4.0",
+    "expo-image-manipulator": "~11.3.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-media-library": "~15.4.1",
+    "expo-navigation-bar": "~2.3.0",
+    "expo-screen-orientation": "~6.0.6",
+    "expo-sensors": "~12.3.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
     "fuse.js": "^6.6.2",
     "native-base": "^3.4.19",
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
-    "react-native": "0.71.8",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gradle-plugin": "^0.71.19",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-pager-view": "^6.2.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-static-safe-area-insets": "^2.2.0",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "13.9.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.1",
-    "react-native-vision-camera": "^2.15.4",
-    "react-native-web": "~0.18.7",
+    "react-native-vision-camera": "^3.2.2",
+    "react-native-web": "~0.19.6",
     "sort-array": "^4.1.5",
     "use-debounce": "^9.0.4",
     "yup": "^0.32.11"
@@ -63,9 +65,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-decorators": "^7.22.7",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@types/react": "~18.0.27",
-    "@types/react-native": "^0.71.6",
+    "@types/react": "~18.2.14",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/sort-array": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
@@ -80,11 +80,10 @@
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^3.0.0",
-    "react-native": "^0.70.7",
     "react-native-dotenv": "^3.4.8",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-web": "^0.18.12",
-    "typescript": "^4.9.4"
+    "react-native-web": "~0.19.6",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
