--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "sst-project-app",
-    "slug": "sst-project-app",
+    "name": "sst-project-mobile",
+    "slug": "sst-project-mobile",
     "version": "1.0.0",
     "orientation": "default",
     "icon": "./assets/icon.png",
@@ -28,7 +28,6 @@
       ],
       [
         "expo-image-picker",
-        
         {
           "photosPermission": "A aplicação acessa suas fotos para permitir que você as compartilhe com o banco de dados de imagens do Projeto SST.",
           "cameraPermission": "A aplicação acessa sua camera para permitir enviar fotos ao banco de imagens do Projeto SST."
