--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,12 +1,11 @@
 require File.join(File.dirname(`node --print "require.resolve('expo/package.json')"`), "scripts/autolinking")
 require File.join(File.dirname(`node --print "require.resolve('react-native/package.json')"`), "scripts/react_native_pods")
-require File.join(File.dirname(`node --print "require.resolve('@react-native-community/cli-platform-ios/package.json')"`), "native_modules")
 
 require 'json'
 podfile_properties = JSON.parse(File.read(File.join(__dir__, 'Podfile.properties.json'))) rescue {}
 
 ENV['RCT_NEW_ARCH_ENABLED'] = podfile_properties['newArchEnabled'] == 'true' ? '1' : '0'
-ENV['EX_DEV_CLIENT_NETWORK_INSPECTOR'] = '1' if podfile_properties['EX_DEV_CLIENT_NETWORK_INSPECTOR'] == 'true'
+ENV['EX_DEV_CLIENT_NETWORK_INSPECTOR'] = podfile_properties['EX_DEV_CLIENT_NETWORK_INSPECTOR']
 
 platform :ios, podfile_properties['ios.deploymentTarget'] || '13.0'
 install! 'cocoapods',
@@ -38,7 +37,7 @@ elsif podfile_properties.key?('ios.flipper') then
   end
 end
 
-target 'sstprojectapp' do
+target 'sstprojectmobile' do
   use_expo_modules!
   config = use_native_modules!
 
@@ -62,8 +61,6 @@ target 'sstprojectapp' do
     react_native_post_install(
       installer,
       config[:reactNativePath],
-      # Set `mac_catalyst_enabled` to `true` in order to apply patches
-      # necessary for Mac Catalyst builds
       :mac_catalyst_enabled => false
     )
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
@@ -89,15 +86,7 @@ target 'sstprojectapp' do
   end
 end
 
-# Uncomment this line if you're not using auto-linking
-# pod 'WatermelonDB', path: '../node_modules/@nozbe/watermelondb'
-
-# WatermelonDB dependency, should not be needed on modern React Native
-# (please file an issue if this causes issues for you)
-# pod 'React-jsi', path: '../node_modules/react-native/ReactCommon/jsi', modular_headers: true
-
-# WatermelonDB dependency
-pod 'simdjson', path: '../node_modules/@nozbe/simdjson', modular_headers: true
-
 pod 'SDWebImage', :modular_headers => true
 pod 'SDWebImageWebPCoder', :modular_headers => true
+pod 'simdjson', path: '../node_modules/@nozbe/simdjson', modular_headers: true
+
