--- a/ios/sstprojectmobile.xcodeproj/xcshareddata/xcschemes/sstprojectmobile.xcscheme
+++ b/ios/sstprojectmobile.xcodeproj/xcshareddata/xcschemes/sstprojectmobile.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1430"
+   LastUpgradeVersion = "1130"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "sstprojectapp.app"
-               BlueprintName = "sstprojectapp"
-               ReferencedContainer = "container:sstprojectapp.xcodeproj">
+               BuildableName = "sstprojectmobile.app"
+               BlueprintName = "sstprojectmobile"
+               ReferencedContainer = "container:sstprojectmobile.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "sstprojectappTests.xctest"
-               BlueprintName = "sstprojectappTests"
-               ReferencedContainer = "container:sstprojectapp.xcodeproj">
+               BuildableName = "sstprojectmobileTests.xctest"
+               BlueprintName = "sstprojectmobileTests"
+               ReferencedContainer = "container:sstprojectmobile.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "sstprojectapp.app"
-            BlueprintName = "sstprojectapp"
-            ReferencedContainer = "container:sstprojectapp.xcodeproj">
+            BuildableName = "sstprojectmobile.app"
+            BlueprintName = "sstprojectmobile"
+            ReferencedContainer = "container:sstprojectmobile.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "sstprojectapp.app"
-            BlueprintName = "sstprojectapp"
-            ReferencedContainer = "container:sstprojectapp.xcodeproj">
+            BuildableName = "sstprojectmobile.app"
+            BlueprintName = "sstprojectmobile"
+            ReferencedContainer = "container:sstprojectmobile.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
