--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "sst-project-app",
+  "name": "sst-project-mobile",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
+    "pod": "cd ios && pod install && cd ..",
+    "gradle:android": "cd android && ./gradlew --stop && ./gradlew clean && cd ..",
     "bundle:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'",
-    "fix:android": "export ANDROID_HOME=$HOME/Library/Android/sdk && export PATH=$PATH:$ANDROID_HOME/emulator && export PATH=$PATH:$ANDROID_HOME/platform-tools",
     "web": "expo start --web"
   },
   "dependencies": {
     "@baronha/react-native-photo-editor": "^1.1.6",
     "@brazilian-utils/brazilian-utils": "^1.0.0-rc.12",
-    "@expo-google-fonts/roboto": "^0.2.2",
-    "@hookform/resolvers": "^2.9.10",
-    "@nozbe/watermelondb": "^0.26.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/netinfo": "9.3.10",
-    "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/native-stack": "^6.9.1",
-    "@tanstack/react-query": "^4.32.6",
-    "axios": "^1.2.0",
+    "@expo-google-fonts/roboto": "^0.2.3",
+    "@hookform/resolvers": "^3.3.2",
+    "@nozbe/watermelondb": "^0.27.1",
+    "@react-native-async-storage/async-storage": "^1.19.5",
+    "@react-native-community/netinfo": "^11.1.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@tanstack/react-query": "^5.8.4",
+    "axios": "^1.6.2",
     "babel-plugin-inline-dotenv": "^1.7.0",
-    "dayjs": "^1.11.9",
-    "expo": "49.0.15",
+    "dayjs": "^1.11.10",
+    "expo": "~49.0.15",
     "expo-av": "~13.4.1",
     "expo-camera": "~13.4.4",
     "expo-file-system": "~15.4.4",
@@ -38,52 +39,50 @@
     "expo-sensors": "~12.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "fuse.js": "^6.6.2",
-    "native-base": "^3.4.19",
+    "fuse.js": "^7.0.0",
+    "native-base": "^3.4.28",
     "query-string": "^8.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.38.0",
+    "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "^2.13.4",
     "react-native-gradle-plugin": "^0.71.19",
-    "react-native-image-crop-picker": "^0.40.0",
-    "react-native-pager-view": "^6.2.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-image-crop-picker": "^0.40.2",
+    "react-native-pager-view": "^6.2.2",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
     "react-native-static-safe-area-insets": "^2.2.0",
-    "react-native-svg": "13.9.0",
+    "react-native-svg": "^14.0.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.1",
-    "react-native-vision-camera": "^3.2.2",
-    "react-native-web": "~0.19.6",
+    "react-native-vision-camera": "^3.6.6",
     "sort-array": "^4.1.5",
-    "use-debounce": "^9.0.4",
-    "yup": "^0.32.11"
+    "use-debounce": "^10.0.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/plugin-proposal-decorators": "^7.22.7",
-    "@types/react": "~18.2.14",
-    "@types/react-native-dotenv": "^0.2.0",
-    "@types/sort-array": "^4.1.0",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^8.46.0",
-    "eslint-config-prettier": "^8.9.0",
+    "@babel/plugin-proposal-decorators": "^7.23.3",
+    "@types/react": "^18.2.37",
+    "@types/react-native-dotenv": "^0.2.2",
+    "@types/sort-array": "^4.1.2",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import-helpers": "^1.3.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.1",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-native": "^4.0.0",
+    "eslint-plugin-react-native": "^4.1.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prettier": "^3.0.0",
-    "react-native-dotenv": "^3.4.8",
-    "react-native-svg-transformer": "^1.0.0",
-    "react-native-web": "~0.19.6",
-    "typescript": "^5.1.3"
+    "prettier": "^3.1.0",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-svg-transformer": "^1.1.0",
+    "react-native-web": "^0.19.9",
+    "typescript": "^5.2.2"
   },
   "private": true
 }
