--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "fuse.js": "^7.0.0",
+    "immer": "^10.0.3",
     "native-base": "^3.4.28",
     "query-string": "^8.1.0",
     "react": "18.2.0",
@@ -59,7 +60,8 @@
     "react-native-vision-camera": "^3.6.6",
     "sort-array": "^4.1.5",
     "use-debounce": "^10.0.0",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
