--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.8.4",
     "axios": "^1.6.2",
     "babel-plugin-inline-dotenv": "^1.7.0",
+    "clone": "^2.1.2",
     "dayjs": "^1.11.10",
     "expo": "~49.0.15",
     "expo-av": "~13.4.1",
@@ -66,6 +67,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-decorators": "^7.23.3",
+    "@types/clone": "^2.1.4",
     "@types/react": "^18.2.37",
     "@types/react-native-dotenv": "^0.2.2",
     "@types/sort-array": "^4.1.2",
