--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@expo-google-fonts/roboto": "^0.2.3",
     "@hookform/resolvers": "^3.3.2",
     "@nozbe/watermelondb": "^0.27.1",
-    "@react-native-async-storage/async-storage": "^1.19.5",
-    "@react-native-community/netinfo": "^11.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "^11.3.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -29,38 +29,38 @@
     "babel-plugin-inline-dotenv": "^1.7.0",
     "clone": "^2.1.2",
     "dayjs": "^1.11.10",
-    "expo": "~49.0.15",
-    "expo-av": "~13.4.1",
-    "expo-camera": "~13.4.4",
-    "expo-file-system": "~15.4.4",
-    "expo-font": "~11.4.0",
-    "expo-image-manipulator": "~11.3.0",
-    "expo-image-picker": "~14.3.2",
-    "expo-media-library": "~15.4.1",
-    "expo-navigation-bar": "~2.3.0",
-    "expo-screen-orientation": "~6.0.6",
-    "expo-sensors": "~12.3.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^51.0.31",
+    "expo-av": "~14.0.7",
+    "expo-camera": "~15.0.15",
+    "expo-file-system": "~17.0.1",
+    "expo-font": "~12.0.9",
+    "expo-image-manipulator": "~12.0.5",
+    "expo-image-picker": "~15.0.7",
+    "expo-media-library": "~16.0.4",
+    "expo-navigation-bar": "~3.0.7",
+    "expo-screen-orientation": "~7.0.5",
+    "expo-sensors": "~13.0.9",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
     "fuse.js": "^7.0.0",
     "immer": "^10.0.3",
     "native-base": "^3.4.28",
-    "query-string": "^8.1.0",
+    "query-string": "^9.1.0",
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
-    "react-native": "0.72.6",
-    "react-native-gesture-handler": "^2.13.4",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-gradle-plugin": "^0.71.19",
-    "react-native-image-crop-picker": "^0.40.2",
-    "react-native-pager-view": "^6.2.2",
-    "react-native-reanimated": "^3.5.4",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0",
+    "react-native-image-crop-picker": "^0.41.2",
+    "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-static-safe-area-insets": "^2.2.0",
-    "react-native-svg": "^14.0.0",
+    "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.1",
-    "react-native-vision-camera": "^3.6.6",
+    "react-native-vision-camera": "^4.5.2",
     "sort-array": "^4.1.5",
     "use-debounce": "^10.0.0",
     "yup": "^1.3.2",
@@ -69,26 +69,29 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-decorators": "^7.23.3",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@types/clone": "^2.1.4",
-    "@types/react": "^18.2.37",
+    "@types/react": "~18.2.79",
     "@types/react-native-dotenv": "^0.2.2",
     "@types/sort-array": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "eslint": "^8.54.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.1.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.1.0",
     "react-native-dotenv": "^3.4.9",
-    "react-native-svg-transformer": "^1.1.0",
+    "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "^0.19.9",
-    "typescript": "^5.2.2"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
