--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-image-manipulator": "~12.0.5",
     "expo-image-picker": "~15.0.7",
     "expo-media-library": "~16.0.4",
+    "expo-modules-autolinking": "1.11.3",
     "expo-navigation-bar": "~3.0.7",
     "expo-screen-orientation": "~7.0.5",
     "expo-sensors": "~13.0.9",
@@ -47,6 +48,7 @@
     "native-base": "^3.4.28",
     "query-string": "^9.1.0",
     "react": "18.2.0",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.48.2",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
