--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,9 +7,6 @@ podfile_properties = JSON.parse(File.read(File.join(__dir__, 'Podfile.properties
 ENV['RCT_NEW_ARCH_ENABLED'] = podfile_properties['newArchEnabled'] == 'true' ? '1' : '0'
 ENV['EX_DEV_CLIENT_NETWORK_INSPECTOR'] = podfile_properties['EX_DEV_CLIENT_NETWORK_INSPECTOR']
 
-# Add source for simdjson
-source 'https://github.com/CocoaPods/Specs.git'
-
 use_autolinking_method_symbol = ('use' + '_native' + '_modules!').to_sym
 origin_autolinking_method = self.method(use_autolinking_method_symbol)
 self.define_singleton_method(use_autolinking_method_symbol) do |*args|
@@ -39,13 +36,14 @@ prepare_react_native_project!
 
 target 'SimpleSST' do
   use_expo_modules!
-  config = use_native_modules!
+  
+  use_modular_headers!
+config = use_native_modules!
 
-  use_frameworks! :linkage => podfile_properties['ios.useFrameworks'].to_sym if podfile_properties['ios.useFrameworks']
+  
+  pod 'simdjson', path: '../node_modules/@nozbe/simdjson'
+use_frameworks! :linkage => podfile_properties['ios.useFrameworks'].to_sym if podfile_properties['ios.useFrameworks']
   use_frameworks! :linkage => ENV['USE_FRAMEWORKS'].to_sym if ENV['USE_FRAMEWORKS']
-
-  # Add simdjson dependency explicitly
-  pod 'simdjson', '~> 3.6.4'
 
   use_react_native!(
     :path => config[:reactNativePath],
