--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,9 @@ shellAppWorkspaces
 .env.production.local
 apps/bare-expo/deploy-url.txt
 
+/android
+/ios
+
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
 
