--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bundle:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'",
     "web": "expo start --web",
     "prebuild": "expo prebuild",
-    "prebuild:clean": "expo prebuild --clean"
+    "prebuild:clean": "expo prebuild --clean",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@baronha/react-native-photo-editor": "^1.1.6",
@@ -21,7 +22,7 @@
     "@expo-google-fonts/roboto": "^0.2.3",
     "@hookform/resolvers": "^3.3.2",
     "@nozbe/watermelondb": "^0.27.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -31,37 +32,38 @@
     "babel-plugin-inline-dotenv": "^1.7.0",
     "clone": "^2.1.2",
     "dayjs": "^1.11.10",
-    "expo": "~52.0.0",
-    "expo-av": "~15.0.2",
-    "expo-camera": "~16.0.18",
-    "expo-file-system": "~18.0.12",
-    "expo-font": "~13.0.4",
-    "expo-image-manipulator": "~13.0.6",
-    "expo-image-picker": "~16.0.6",
-    "expo-media-library": "~17.0.6",
-    "expo-modules-autolinking": "~2.0.0",
-    "expo-navigation-bar": "~4.0.9",
-    "expo-screen-orientation": "~8.0.4",
-    "expo-sensors": "~14.0.2",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
+    "expo": "~53.0.0",
+    "expo-audio": "~0.4.9",
+    "expo-camera": "~16.1.11",
+    "expo-file-system": "~18.1.11",
+    "expo-font": "~13.3.2",
+    "expo-image-manipulator": "~13.1.7",
+    "expo-image-picker": "~16.1.4",
+    "expo-media-library": "~17.1.7",
+    "expo-modules-autolinking": "~2.1.0",
+    "expo-navigation-bar": "~4.2.8",
+    "expo-screen-orientation": "~8.1.7",
+    "expo-sensors": "~14.1.4",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-video": "~2.2.2",
     "fuse.js": "^7.0.0",
     "immer": "^10.0.3",
     "native-base": "^3.4.28",
     "query-string": "^9.1.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.48.2",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native": "0.79.6",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-gradle-plugin": "^0.71.19",
     "react-native-image-crop-picker": "^0.41.2",
-    "react-native-pager-view": "6.5.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-pager-view": "6.7.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-static-safe-area-insets": "^2.2.0",
-    "react-native-svg": "15.8.0",
+    "react-native-svg": "15.11.2",
     "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.1",
     "react-native-vision-camera": "^4.5.2",
@@ -75,7 +77,7 @@
     "@babel/plugin-proposal-decorators": "^7.23.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@types/clone": "^2.1.4",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-native-dotenv": "^0.2.2",
     "@types/sort-array": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
@@ -91,11 +93,13 @@
     "eslint-plugin-react-native": "^4.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "metro-react-native-babel-preset": "^0.77.0",
+    "patch-package": "^8.0.1",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.1.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-svg-transformer": "^1.5.0",
-    "react-native-web": "^0.19.9",
-    "typescript": "~5.3.3"
+    "react-native-web": "^0.20.0",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
