--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@expo-google-fonts/roboto": "^0.2.3",
     "@hookform/resolvers": "^3.3.2",
     "@nozbe/watermelondb": "^0.27.1",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -32,41 +32,44 @@
     "babel-plugin-inline-dotenv": "^1.7.0",
     "clone": "^2.1.2",
     "dayjs": "^1.11.10",
-    "expo": "~53.0.0",
-    "expo-audio": "~0.4.9",
-    "expo-camera": "~16.1.11",
-    "expo-file-system": "~18.1.11",
-    "expo-font": "~13.3.2",
-    "expo-image-manipulator": "~13.1.7",
-    "expo-image-picker": "~16.1.4",
-    "expo-media-library": "~17.1.7",
-    "expo-modules-autolinking": "~2.1.0",
-    "expo-navigation-bar": "~4.2.8",
-    "expo-screen-orientation": "~8.1.7",
-    "expo-sensors": "~14.1.4",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-video": "~2.2.2",
+    "expo": "~54.0.0",
+    "expo-asset": "~12.0.11",
+    "expo-audio": "~1.0.16",
+    "expo-camera": "~17.0.10",
+    "expo-file-system": "~19.0.20",
+    "expo-font": "~14.0.10",
+    "expo-image-manipulator": "~14.0.8",
+    "expo-image-picker": "~17.0.9",
+    "expo-media-library": "~18.2.1",
+    "expo-modules-autolinking": "~3.0.22",
+    "expo-navigation-bar": "~5.0.10",
+    "expo-screen-orientation": "~9.0.8",
+    "expo-sensors": "~15.0.8",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "expo-video": "~3.0.15",
     "fuse.js": "^7.0.0",
     "immer": "^10.0.3",
     "native-base": "^3.4.28",
     "query-string": "^9.1.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.48.2",
-    "react-native": "0.79.6",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-gradle-plugin": "^0.71.19",
     "react-native-image-crop-picker": "^0.41.2",
-    "react-native-pager-view": "6.7.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-pager-view": "6.9.1",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-static-safe-area-insets": "^2.2.0",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "15.12.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.1",
     "react-native-vision-camera": "^4.5.2",
+    "react-native-worklets": "^0.7.1",
+    "react-native-worklets-core": "^1.6.2",
     "sort-array": "^4.1.5",
     "use-debounce": "^10.0.0",
     "yup": "^1.3.2",
@@ -77,7 +80,7 @@
     "@babel/plugin-proposal-decorators": "^7.23.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@types/clone": "^2.1.4",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "@types/react-native-dotenv": "^0.2.2",
     "@types/sort-array": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
@@ -98,8 +101,8 @@
     "prettier": "^3.1.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-svg-transformer": "^1.5.0",
-    "react-native-web": "^0.20.0",
-    "typescript": "~5.8.3"
+    "react-native-web": "^0.21.0",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
