--- a/package.json
+++ b/package.json
@@ -14,14 +14,22 @@
     "web": "expo start --web",
     "prebuild": "expo prebuild",
     "prebuild:clean": "expo prebuild --clean",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "build:dev": "eas build --profile development --platform all",
+    "build:preview": "eas build --profile preview --platform all",
+    "build:prod": "eas build --profile production --platform all",
+    "build:android": "eas build --profile production --platform android",
+    "build:ios": "eas build --profile production --platform ios",
+    "submit:android": "eas submit --platform android --latest",
+    "submit:ios": "eas submit --platform ios --latest",
+    "submit:all": "eas submit --platform all --latest"
   },
   "dependencies": {
     "@baronha/react-native-photo-editor": "^1.1.6",
     "@brazilian-utils/brazilian-utils": "^1.0.0-rc.12",
     "@expo-google-fonts/roboto": "^0.2.3",
     "@hookform/resolvers": "^3.3.2",
-    "@nozbe/watermelondb": "^0.27.1",
+    "@nozbe/watermelondb": "0.28.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -33,13 +41,18 @@
     "clone": "^2.1.2",
     "dayjs": "^1.11.10",
     "expo": "~54.0.0",
+    "expo-application": "~7.0.8",
     "expo-asset": "~12.0.11",
     "expo-audio": "~1.0.16",
     "expo-camera": "~17.0.10",
+    "expo-clipboard": "~8.0.8",
+    "expo-crypto": "~15.0.8",
     "expo-file-system": "~19.0.20",
     "expo-font": "~14.0.10",
+    "expo-image": "~3.0.11",
     "expo-image-manipulator": "~14.0.8",
     "expo-image-picker": "~17.0.9",
+    "expo-linking": "~8.0.10",
     "expo-media-library": "~18.2.1",
     "expo-modules-autolinking": "~3.0.22",
     "expo-navigation-bar": "~5.0.10",
@@ -47,6 +60,8 @@
     "expo-sensors": "~15.0.8",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
+    "expo-updates": "~29.0.15",
     "expo-video": "~3.0.15",
     "fuse.js": "^7.0.0",
     "immer": "^10.0.3",
@@ -58,7 +73,8 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gradle-plugin": "^0.71.19",
-    "react-native-image-crop-picker": "^0.41.2",
+    "react-native-image-crop-picker": "^0.51.1",
+    "react-native-keyboard-controller": "1.18.5",
     "react-native-pager-view": "6.9.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
@@ -67,8 +83,9 @@
     "react-native-svg": "15.12.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.1",
-    "react-native-vision-camera": "^4.5.2",
-    "react-native-worklets": "^0.7.1",
+    "react-native-vision-camera": "^4.7.3",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
     "react-native-worklets-core": "^1.6.2",
     "sort-array": "^4.1.5",
     "use-debounce": "^10.0.0",
