--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
+    "expo-tracking-transparency": "~6.0.8",
     "expo-updates": "~29.0.15",
     "expo-video": "~3.0.15",
     "fuse.js": "^7.0.0",
